Working scripts for GPU training on Pando

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\users\\pajo8\\anaconda3\\envs\\rul-prediction\\python.exe"
+    "python.pythonPath": "C:\\Users\\pajo8\\anaconda3\\envs\\RUL-Prediction\\python.exe"
 }
